# revscripts

./: .gitignore  LICENSE  README.md
frida/: indirect_trace_stalker.py  trace_by_rvas.js  trace_stalker.py
frida/edgetrace/server/: Cargo.toml
frida/edgetrace/server/src/: main.rs  messages.rs  mod_lookup.rs  outman.rs  server.rs
frida/gttrace/: README.md  agent.js  gttrace.py  requirements.txt
frida/gttrace/js/: agent.js
frida/gttrace/lib/: common.py  dbgsym.py  messages.py  mod_lookup.py  outman.py  tracer.py  traces.py
frida/gttrace/server/: Cargo.toml  gttrace.py
frida/gttrace/server/lib/: common.py  messages.py  server.py
frida/gttrace/server/src/: main.rs  messages.rs  mod_lookup.rs  outman.rs  server.rs
frida/rgttrace/server/src/: main.rs  messages.rs  server.rs
frida/socktrace/: README.md  agent.js
frida/socktrace/js/: agent.js.bak
frida/socktrace/lib/: outman.py
frida/socktrace/server/: Cargo.toml  Makefile
frida/socktrace/server/src/: event.rs  frame.rs  main.rs  output.rs  util.rs
ghidra/: DumpFuncRVAs.py  DumpFuncTreeRVAs.py
legacy/gttrace-gagdet/: agent.js
legacy/gttrace-gagdet/server/: requirements.txt
legacy/gttrace-gagdet/server/lib/: dbgsym.py  mod_lookup.py  outman.py
legacy/socktrace/: socktrace.py
legacy/socktrace/js/: agent.js
legacy/socktrace/lib/: tracer.py
