[package]
name = "edgetrace-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

object = "0.36"
gimli = "0.29"
addr2line = "0.22"

nix = { version = "0.29", default-features = false, features = ["fs"] }

